--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<li><a href="https://tumbolia.tk/slides">presentations slides</a></li>
 				<li><strike><a href="https://todo.tumbolia.tk">todo</a></strike></li>
 				<li><strike><a href="http://notes.tumbolia.tk">notes</a></strike></li>
-				<li><a href="http://tumbolia.tk/objview">objview</a></li>
+				<li><a href="http://tumbolia.tk/objview#url=test.obj">objview</a></li>
 				<li><a href="http://anotherkamila.github.io">anotherkamila.github.io</a></li>
 			</ul>
 		</section>
