--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<section id="projects">
 			<ul>
-				<li><a href="http://spevnik.tumbolia.tk">spevnik</a></li>
+				<li><strike><a href="http://spevnik.tumbolia.tk">spevnik</a></strike></li>
 				<li><a href="/slides">presentations slides</a></li>
 				<li><strike><a href="https://todo.tumbolia.tk">todo</a></strike></li>
 				<li><strike><a href="http://notes.tumbolia.tk">notes</a></strike></li>
