[build] objview: build of 4995b36

--- a/objview/index.html
+++ b/objview/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<div id="view"></div>
 		<div id="messages">Loading...</div>
+		<input id="urlbox" type="text" placeholder="URL to an OBJ file (e.g. http://tumbolia.tk/objview/test.obj)" />
 		<script src="lib/three.js/three.min.js"></script>
 		<script src="lib/three.js/TrackballControls.js"></script>
 		<script src="lib/three.js/OBJLoader.js"></script>
