--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<section id="projects">
 			<ul>
 				<li><strike><a href="http://spevnik.tumbolia.tk">spevnik</a></strike></li>
-				<li><a href="/slides">presentations slides</a></li>
+				<li><a href="/presentations">presentations</a></li>
 				<li><strike><a href="https://todo.tumbolia.tk">todo</a></strike></li>
 				<li><strike><a href="http://notes.tumbolia.tk">notes</a></strike></li>
 				<li><a href="/objview#url=http://tumbolia.tk/objview/test.obj">objview</a></li>
