add IYPT Elastic Space presentation

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,6 +7,7 @@
     <body>
         <ul>
             <li><a href="geometria1-ksp-jesen-2013">Geometria 1 (KSP jesen 2013; Slovak only)</a></li>
+            <li><a href="IYPT2013-02.en.pptx">IYPT 2013 problem #2: Elastic Space (PPTX (sorry); English only)</a></li>
         </ul>
     </body>
 </html>
