change todo link to the real one (even though it doesn't do much)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<ul>
 				<li><a href="http://spevnik.tumbolia.tk">spevnik</a></li>
 				<li><a href="/presentations">presentations</a></li>
-				<li><strike><a href="https://todo.tumbolia.tk">todo</a></strike></li>
+				<li><strike><a href="https://t.tumbolia.tk">todo</a></strike></li>
 				<li><strike><a href="http://notes.tumbolia.tk">notes</a></strike></li>
 				<li><a href="/objview#url=http://tumbolia.tk/objview/test.obj">objview</a></li>
 				<li><a href="http://anotherkamila.github.io">anotherkamila.github.io</a></li>
